Bug 312932 - no way to remove via stations in routing widget
Summary: no way to remove via stations in routing widget
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6 (KDE 4.11)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Shiv Shankar
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-09 10:46 UTC by Bernhard Beschow
Modified: 2013-04-24 18:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Fix for this bug (1.94 KB, text/plain)
2013-04-24 08:21 UTC, Shiv Shankar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2013-01-09 10:46:26 UTC
It's possible to add via stations with the "+" button, but it's not possible to remove them again.

Reproducible: Always

Steps to Reproduce:
1. Add a via station in routing widget
2. Try to remove it again
Actual Results:  
Removing seems not to be possible.

Expected Results:  
There should be an obvious way to remove via stations.
Comment 1 Shiv Shankar 2013-04-24 08:21:36 UTC
Created attachment 79409 [details]
Fix for this bug

Fixes the bug, adds a toolbutton to the right of each LineEdit that manages removing extra input widgets.
Comment 2 Dennis Nienhüser 2013-04-24 18:35:54 UTC
Git commit 9bb80f566780f05bedf0e514d8852f839f31da4f by Dennis Nienhüser, on behalf of Shiv Shankar Verma.
Committed on 24/04/2013 at 20:05.
Pushed by nienhueser into branch 'master'.

Add a button to clear via stations.

REVIEW: 110149

M  +11   -1    src/lib/routing/RoutingInputWidget.cpp

http://commits.kde.org/marble/9bb80f566780f05bedf0e514d8852f839f31da4f