Add a button to clear via stations.

REVIEW: 110149
BUG: 312932